--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -2,19 +2,23 @@
   "name": "NewsHACK II: Electric Boogaloo",
   "version": "0.0.1",
   "description": "Chrome extension for BBC NewsHACK",
-  "icons": { "128": "icon.png" },
-  "background": { "scripts": ["background.js"] },
-  "content_scripts": [
-    { 
-		"matches": ["http://*.bbc.co.uk/*"], 
-		"js": ["jquery-1.11.0.min.js", "work.js"],
-		"css": ["style.css"]
-	}
-  ],
+  "icons": { "16": "icon.png", "128": "icon.png" },
+  "background": { "scripts": ["jquery-1.11.0.min.js", "background.js"] },
   "permissions": [
     "tabs",
-	"activeTab"
+	"activeTab",
+	"contextMenus",
+	"http://data.bbc.co.uk"
   ],
+  "commands": {
+	  "doSelection": {
+		"suggested_key": {
+		  "default": "Ctrl+Q"
+		},
+		"description": "My description",
+		"global": true
+	 }
+  },
   "browser_action": {
       "default_name": "Display Map",
       "default_icon": "icon.png",
