--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -2,7 +2,7 @@
   "name": "NewsHACK II: Electric Boogaloo",
   "version": "0.0.1",
   "description": "Chrome extension for BBC NewsHACK",
-  "icons": { "16": "img/icon.png", "128": "img/icon.png" },
+  "icons": { "128": "img/icon128.png" },
   "background": { "scripts": ["background.js"] },
   "permissions": [
     "tabs",
@@ -22,7 +22,7 @@
   },
   "browser_action": {
       "default_name": "Display Map",
-      "default_icon": "img/icon.png",
+      "default_icon": "img/icon128.png",
       "default_popup": "popup/popup.html",
 	  "default_title": "This is a test"
   },
