--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -27,5 +27,6 @@
 	  "default_title": "This is a test"
   },
   "manifest_version": 2,
-  "content_security_policy": "default-src 'none'; style-src 'self'; script-src 'self' 'unsafe-eval'; connect-src * "
+  
+  "content_security_policy": "img-src *; default-src 'none'; style-src 'self'; script-src 'self' 'unsafe-eval'; connect-src * "
 }
